2006-11-28  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/driver.c:
	* doc/src/ns_writer.man:
	* contrib/examples/writer.tcl: Updated ns_writer command to 
	support submitfile which was broken. Aed additional arguments to 
	make it flexible in returning parts of file via wruter thread. Added
	example of ns_writer usage.

	* nsd/driver.c: Updated Writer functions to Tcl_WideInt to support
	files over 2Gb in size. Still a lot of routines need to be updated 
	which return files, like Ns_ConnSend and etc. The minor obstacle also 
	that GNU printf checker does not support new formats like %q in 
	Ns_DStringPrintf.

	* nsd/ns.h:
	* nsd/fastpath.c:
	* nsd/return.c:
	* nsd/connio.c:
	* nsd/driver.c:
	* nsd/nsd.h: Writer thread currently is the only way to return files 
	bigger than 2Gb in size. Finally made it work with huge files.
	CORRECTION: Now ns_respond or fastpath can return files bigger than 2GB as well.
	
2006-11-27  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/tcljob.c:
	* doc/src/ns_job.man: Added -head parameter to ns_job queue
	which if given places new job to the beginning of the queue. By 
	default all new jobs are added to the end.

2006-11-17  Bernd Eidenschink  <eide@users.sf.net>

	* nsd/mimetypes.c: Added recommended MIME types for OpenDocument documents.

2006-11-16  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/tcltime.c: Remove excessive check for shared object when
	converting internal rep of time type.

2006-11-14  Vlad Seryakov  <seryakov@users.sf.net>

	* tcl/sendmail.tcl: Fixed the bug or weird behaviour when sending big 
	attachments, because socket is nonblocking sending big chunk in one puts
	does not work, so need to do split and send line by line

2006-11-14  Stephen Deasey  <sdeasey@users.sf.net>

	* doc/src/man3/Ns_Sls.man: Document the C API for SLS data. Tcl
	doctools is hurting...

2006-11-12  Stephen Deasey  <sdeasey@users.sf.net>

	* Makefile:
	* include/Makefile.module.in: Don't clobber editor backup files.

	* configure.in:
